# chefclaw

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.mjs  .secretlintrc.json  CLAUDE.md  Dockerfile.api  NOTICE  README.md  compose.golden.yaml  compose.prod.yaml  compose.yaml  package-lock.json  package.json
.claude/: settings.json
.claude/hooks/: README.md  pre-tool-use.py  test_hooks.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
backend/: Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8c1f5d2a9b40_walking_skeleton.py  a1c2e3f4b5d6_add_users_paid_tier.py  a3d9e1f4c72b_add_illustrating_job_status.py  b2f4a6c8d0e1_app_config_runtime_overrides.py  c3f0a1b2d4e5_cover_sprites_real_frames_misses.py  d1e2f3a4b5c6_m2_identity_invites_sessions.py  e2f3a4b5c6d7_owner_scope_recipe_dedupe.py  f2a7c91b3e08_add_recipes_cover_path.py  f2a7c91b3e08_add_recipes_illustration_and_estimates.py  f3a4b5c6d7e8_add_users_paid_tier.py  f3a4b5c6d7e8_request_events_rate_limit.py
backend/src/chefclaw/: __init__.py  app.py  app_config.py  auth.py  config.py  db.py  documents.py  emailer.py  errors.py  export_openapi.py  main.py  models.py  netguard.py  oauth.py  observability.py  ratelimit.py  schemas.py  seed_fake_owner.py  seed_golden_owner.py  sessions.py  spend.py
backend/src/chefclaw/covers/: __init__.py  catalog.json
backend/src/chefclaw/extractors/: __init__.py  fake.py  gemini.py  prompt.py  qwen.py
backend/src/chefclaw/images/: __init__.py  fake.py  gemini.py
backend/src/chefclaw/prompts/: extract_v1.md  extract_v2.md  extract_v3.md  extract_v4.md  extract_v5.md
backend/src/chefclaw/routers/: __init__.py  admin.py  auth.py  deps.py  extraction.py  jobs.py  library.py  spend.py
backend/src/chefclaw/services/: __init__.py  config.py  covers.py  frames.py  illustrations.py  invites.py  jobs.py  recipes.py  repo.py  users.py
backend/src/chefclaw/sources/: __init__.py  bilibili.py  fake.py  localfile.py  rednote.py
backend/tests/: conftest.py  fakes.py  test_admin_config.py  test_admin_config_db.py  test_admin_users.py  test_api_recipes.py  test_api_spend.py  test_api_users.py  test_app_config.py  test_auth.py  test_auth_db.py  test_covers.py  test_documents.py  test_export_openapi.py  test_extractors.py  test_extractors_qwen.py  test_health.py  test_images.py  test_invites.py  test_invites_db.py  test_migrations_db.py  test_netguard.py  test_observability.py  test_prompt_injection.py  test_ratelimit.py  test_recipes_service.py  test_sources.py  test_spa_static.py  test_spend.py  test_spend_db.py  test_users_db.py  test_worker.py  test_worker_covers.py  test_worker_db.py
docs/: ARCHITECTURE.md  COLLABORATION.md  DATA_MODEL.md  DEPLOY_CHECKLIST.md  MULTI-USER-FEASIBILITY.md  QA_MATRIX.md  RUNBOOK.md  SECURITY.md  SERVICES.md  SETUP.md  TESTING.md
docs/adr/: 2026-07-05-agpl-licensing-and-kit-attribution.md  2026-07-05-mvp-stack-and-layout.md  2026-07-06-data-model-and-dedupe.md  2026-07-06-design-system-and-brand.md  2026-07-06-jobs-without-broker.md  2026-07-06-m-deploy-vps-and-rednote-escalation.md  2026-07-06-observability-and-cost.md  2026-07-06-source-and-extractor-adapters.md  2026-07-07-admin-config-panel.md  2026-07-07-cover-system-sprites-and-private-frames.md  2026-07-07-extractor-robustness-qa.md  2026-07-07-illustration-job-type.md  2026-07-07-m2-accounts-and-invites.md  2026-07-07-owner-editable.md  2026-07-07-path-b-multi-user-product.md  2026-07-07-per-user-budget-caps.md  2026-07-07-push-based-cd-ghcr.md  2026-07-07-security-audit-v2.md  2026-07-07-v2c-cross-device.md  README.md
docs/examples/: protection.json
frontend/: .prettierignore  eslint.config.js  index.html  openapi-ts.config.ts  package.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: playwright.golden.config.ts  playwright.smoke.config.ts  smoke.spec.ts
frontend/e2e/golden/: 01-paste-to-card.spec.ts  02-jobs-drawer.spec.ts  global-setup.ts  helpers.ts
frontend/public/: manifest.json  sw.js
frontend/src/: api-error.ts  api.ts  auth-context.ts  index.css  main.tsx  router.tsx  sentry.test.ts  sentry.ts  token-context.ts  token.ts  vite-env.d.ts
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: admin-config-page.test.tsx  admin-config-page.tsx  admin-invites-page.test.tsx  admin-invites-page.tsx  app-shell.tsx  auth-gate.test.tsx  auth-gate.tsx  health-panel.test.tsx  job-chip.tsx  (+18 more)
ops/: chefclaw-backup.service.example  chefclaw-backup.timer.example  com.chefclaw.backup.plist.example
scripts/: backup.sh  deploy.sh  phase2-acceptance.sh  prod-smoke.sh
(+30 files in other folders)
