[project]
name = "chefclaw-backend"
version = "0.1.0"
description = "chefclaw API — FastAPI backend for the personal food & health intelligence app"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "yt-dlp>=2026.7.4",
    "google-genai>=2.10.0",
    # [socks] so the M-Deploy fetch-proxy knob accepts socks5:// URLs
    # (Tailscale SOCKS5 — escalation ladder rung b); yt-dlp handles socks natively.
    "httpx[socks]>=0.28.1",
    "python-multipart>=0.0.32",
    # DSN-gated error tracking (V2-A ADR): no SENTRY_DSN => never initialised.
    "sentry-sdk[fastapi]>=2.0",
    # M2 OAuth (ADR 2026-07-07-m2-accounts-and-invites): server-side Google
    # Authorization-Code + PKCE. Used ONLY by GoogleOAuthProvider (imported
    # lazily) for ID-token JWKS verification — the fake provider needs it never.
    "authlib>=1.3",
    # M2 invites (PR 3): AWS SES for invite emails. Used ONLY by SesEmailAdapter
    # (imported lazily); the fake ConsoleEmailAdapter default never needs it, so
    # CI/dev never import it. Creds via the boto3 chain (IAM role on the VPS).
    "boto3>=1.34",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chefclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "golden: DB-tier tests needing a throwaway local postgres on 127.0.0.1:55432 (run explicitly: uv run pytest -m golden). NEVER the real compose DB.",
]
# Golden tests are deselected by default (CI and plain `uv run pytest` have no
# database); an explicit CLI `-m golden` overrides this.
addopts = "-m \"not golden\""

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
